# documind

./: .gitignore  README.md  gen_b1.py  gen_b2.py  gen_b3.py  gen_utils.py  index.html  latest-test.json  latest.json  package-lock.json  package.json  privacy-policy.html  vite.config.ts
.claude/: settings.local.json
.claude/commands/: classify-test-cycle.md  randomdocs.md
.github/workflows/: release-test.yml  release.yml
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-1773076109941.json  snapshot-1773114163281.json  snapshot-1773152218178.json  snapshot-1773161663427.json  snapshot-1773164037619.json  snapshot-1773166243994.json  snapshot-1773239570797.json  snapshot-1773246702353.json  snapshot-1773251681044.json  snapshot-1773287871753.json
docs/design/: api-management-google-drive.md
docs/reports/: 2026-03-10-v0.1.10-release-report.md  2026-03-10-v0.1.11-release-report.md  2026-03-10-v0.1.12-release-report.md  2026-03-10-v0.1.13-release-report.md  2026-03-10-v0.1.4-release-report.md  2026-03-10-v0.1.5-release-report.md  2026-03-10-v0.1.6-release-report.md  2026-03-10-v0.1.7-release-report.md  2026-03-10-v0.1.8-release-report.md  2026-03-10-v0.1.9-release-report.md  2026-03-11-v0.2.0-release-report.md  2026-03-11-v0.3.0-release-report.md  (+15 more)
scripts/: test-classify.ts  test-full-classify.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs  oauth_server.rs
(+60 files in other folders)
